<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dip">
    
    <!-- Name Label -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bg" />

    <TextView
        android:text="@string/place_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="5dip"
        android:textStyle="bold"/>
    
    <!--  Name Value -->
    <TextView
        android:id="@+id/place_view_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <!-- Address Label -->
    <TextView
        android:text="@string/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="5dip"
        android:textStyle="bold"/>
    
    <!--  Address Value -->

    <TextView
        android:id="@+id/place_view_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <!-- Location Value -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/phone" />

    <TextView
        android:id="@+id/place_view_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="5dip"/>
    <Button
        android:id="@+id/share"
        android:text="@string/share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/dir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_direction" />

    <Button
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map" />

</LinearLayout>