<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dip" >

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:orientation="vertical"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_vic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_name"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/address"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image"
        android:src="@drawable/arrow" />

    <TextView
        android:id="@+id/list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/place_name"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans" />

</RelativeLayout>